personal controller file updated for swagger
